--- a/index.html
+++ b/index.html
@@ -12,6 +12,179 @@
 </head>
 
 <body>
+    <!-- 容器 -->
+    <div class="container">
+        <!-- 導覽列 -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">THE CHOCOLATE</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">CHOCOLATES <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">INFO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- 輪播圖 -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/banner1.jpg" class="d-block w-100" alt="巧克力果實">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Hygge life full with CHOCOLATES</h5>
+                        <p>Get one CHOCOLATE per day, the life full with HYGGE.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/banner2.jpg"" class=" d-block w-100" alt="巧克力布朗尼">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Chocolate Brownie</h5>
+                        <p>Warm chocolate brownie to start the warm day.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/banner3.jpg" class="d-block w-100" alt="巧克力塊">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Chocolates</h5>
+                        <p>Tried, then get the chocolates.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/banner4.jpg" class="d-block w-100" alt="巧克力飲">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Cocoa</h5>
+                        <p>Cocoa warm your heart.</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <!-- CHOCOLATES -->
+        <h1 mt-5>CHOCOLATES</h1>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="card bg-dark text-white border-0">
+                    <img src="./img/banner1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="card bg-dark text-white border-0">
+                    <img src="./img/banner2.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="card bg-dark text-white border-0">
+                    <img src="./img/banner3.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="card bg-dark text-white border-0">
+                    <img src="./img/banner4.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- NEWS -->
+        <h1>INFO</h1>
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="card mb-3">
+                    <img src="./img/banner4.jpg" class="card-img-top" alt="Drink">
+                    <div class="card-body">
+                        <h5 class="card-title">Drink</h5>
+                        <p class="card-text">Let's make the drinks with chocolates.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="card mb-3">
+                    <img src="./img/banner2.jpg" class="card-img-top" alt="DIY cake">
+                    <div class="card-body">
+                        <h5 class="card-title">Make the cake</h5>
+                        <p class="card-text">Let's make the cakes with chocolates.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="card mb-3">
+                    <img src="./img/banner3.jpg" class="card-img-top" alt="Products">
+                    <div class="card-body">
+                        <h5 class="card-title">Products</h5>
+                        <p class="card-text">We provide the products make with chocolates.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- contact -->
+            <h1>Contact</h1>
+            <div class="row">
+                <div class="col-sm-12 col-md-4 col-lg-4">姓名</div>
+                <div class="col-sm-12 col-md-8 col-lg-8">
+                    <input class="form-control" type="text" placeholder="請輸入您的姓名">
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">信箱</div>
+                <div class="col-sm-12 col-md-8 col-lg-8">
+                    <input class="form-control" type="email" placeholder="請輸入您的信箱">
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">請輸入您的建議</div>
+                <div class="col-sm-12 col-md-8 col-lg-8">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+
+
+
+
+        </div>
 
 
 
@@ -39,16 +212,20 @@
 
 
 
-    <!-- Bootstrap CDN JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+
+
+
+
+        <!-- Bootstrap CDN JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
