--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <!-- Bootstrap CDN CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- 自己的 CSS -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <!-- 容器 -->
-    <div class="container">
+    <div class="container bg-light">
         <!-- 導覽列 -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">THE CHOCOLATE</a>
@@ -37,7 +40,7 @@
         </nav>
 
         <!-- 輪播圖 -->
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide mb-3 mb-md-3" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -85,9 +88,9 @@
         </div>
 
         <!-- CHOCOLATES -->
-        <h1 mt-5>CHOCOLATES</h1>
+        <h1 my-4 my-md-4>CHOCOLATES</h1>
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
                 <div class="card bg-dark text-white border-0">
                     <img src="./img/banner1.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay">
@@ -98,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
                 <div class="card bg-dark text-white border-0">
                     <img src="./img/banner2.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay">
@@ -109,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
                 <div class="card bg-dark text-white border-0">
                     <img src="./img/banner3.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay">
@@ -120,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
                 <div class="card bg-dark text-white border-0">
                     <img src="./img/banner4.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay">
@@ -134,7 +137,7 @@
         </div>
 
         <!-- NEWS -->
-        <h1>INFO</h1>
+        <h1>INFO</h1 >
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="card mb-3">
@@ -163,29 +166,37 @@
                     </div>
                 </div>
             </div>
-
-            <!-- contact -->
-            <h1>Contact</h1>
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">姓名</div>
-                <div class="col-sm-12 col-md-8 col-lg-8">
-                    <input class="form-control" type="text" placeholder="請輸入您的姓名">
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">信箱</div>
-                <div class="col-sm-12 col-md-8 col-lg-8">
-                    <input class="form-control" type="email" placeholder="請輸入您的信箱">
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">請輸入您的建議</div>
-                <div class="col-sm-12 col-md-8 col-lg-8">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-            </div>
-
-
-
-
         </div>
 
+        <!-- contact -->
+        <h1 my-4 mt-md-4>聯絡我們</h1>
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">姓名</div>
+            <div class="col-sm-12 col-md-8 col-lg-8">
+                <input class="form-control" type="text" placeholder="請輸入您的姓名">
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">信箱</div>
+            <div class="col-sm-12 col-md-8 col-lg-8">
+                <input class="form-control" type="email" placeholder="請輸入您的信箱">
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">請輸入您的建議</div>
+            <div class="col-sm-12 col-md-8 col-lg-8">
+                <textarea class="form-control mb-3 mb-md-3" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+
+            <input class="btn btn-primary d-block mx-auto w-40 mb-4" type="submit" value="Submit">
+        </div>
+
+        <iframe class="w-100" my-3 my-md-4 my-lg-3
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3617.1825578597804!2d121.212398315446!3d24.9599027474108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823ca851c21bb%3A0xf5288077701c775e!2z5Y2I5ZCO5biC5aC0!5e0!3m2!1szh-TW!2stw!4v1602765063018!5m2!1szh-TW!2stw"
+            height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+        </iframe>
+
+        <footer class="text-white bg-dark py-4 text-center mt-2 mt-md-2">
+        Copyright &copy; 2020 THE CHOCOLATES
+        </footer>
+
+    </div>
 
 
 
@@ -216,16 +227,23 @@
 
 
 
-        <!-- Bootstrap CDN JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-            crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+    <!-- Bootstrap CDN JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
