--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- 容器 -->
     <div class="container bg-light">
         <!-- 導覽列 -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <a class="navbar-brand" href="#">THE CHOCOLATE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,15 +51,15 @@
                 <div class="carousel-item active">
                     <img src="./img/banner1.jpg" class="d-block w-100" alt="巧克力果實">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Hygge life full with CHOCOLATES</h5>
+                        <h5>Hygge life full with THE CHOCOLATES</h5>
                         <p>Get one CHOCOLATE per day, the life full with HYGGE.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/banner2.jpg"" class=" d-block w-100" alt="巧克力布朗尼">
+                    <img src="img/banner2.jpg" class=" d-block w-100" alt="巧克力布朗尼">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Chocolate Brownie</h5>
-                        <p>Warm chocolate brownie to start the warm day.</p>
+                        <h5>Brownie Chocolate</h5>
+                        <p>To get warm brownie chocolate to start the warm day.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -72,8 +72,8 @@
                 <div class="carousel-item">
                     <img src="./img/banner4.jpg" class="d-block w-100" alt="巧克力飲">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Cocoa</h5>
-                        <p>Cocoa warm your heart.</p>
+                        <h5>Cacao Drink</h5>
+                        <p>One cup of cacao drink to warm your heart.</p>
                     </div>
                 </div>
             </div>
@@ -88,56 +88,52 @@
         </div>
 
         <!-- CHOCOLATES -->
-        <h1 my-4 my-md-4>CHOCOLATES</h1>
+        <h1 class="my-4 my-md-4">CHOCOLATES</h1>
         <div class="row">
             <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
-                <div class="card bg-dark text-white border-0">
-                    <img src="./img/banner1.jpg" class="card-img" alt="...">
+                <div class="card-info bg-dark text-white border-0">
+                    <img src="./img/banner1.jpg" class="card-img" alt="products">
                     <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                        <h5 class="card-title">Prime Chocolate</h5>
+                        <p class="card-text">Original, Traditional and Authentic Quality is THE CHOCOLATES's commitment.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
-                <div class="card bg-dark text-white border-0">
-                    <img src="./img/banner2.jpg" class="card-img" alt="...">
+                <div class="card-info bg-dark text-white border-0">
+                    <img src="./img/banner2.jpg" class="card-img" alt="products">
                     <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                        <h5 class="card-title">Brownie Chocolate Selector</h5>
+                        <p class="card-text">Our best-ever brownie. Dense, cacao-rich and nibby, sealed in 50% milk chocolate.</p>
+                        <p class="card-text">$120</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
-                <div class="card bg-dark text-white border-0">
-                    <img src="./img/banner3.jpg" class="card-img" alt="...">
+                <div class="card-info bg-dark text-white border-0">
+                    <img src="./img/banner3.jpg" class="card-img" alt="products">
                     <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                        <h5 class="card-title">Chocolate</h5>
+                        <p class="card-text">From outright classic to stunning seasonal specialities and from the silky smooth to the dramatically crunchym we are bursting with full-on nutty flavours and textures.</p>
+                        <p class="card-text">$120-$220</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-xl-6 my-3 my-md-4 my-xl-3">
-                <div class="card bg-dark text-white border-0">
-                    <img src="./img/banner4.jpg" class="card-img" alt="...">
+                <div class="card-info bg-dark text-white border-0">
+                    <img src="./img/banner4.jpg" class="card-img" alt="products">
                     <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                        <h5 class="card-title">Organic Cacao Drink</h5>
+                        <p class="card-text">We have enlived single origin RAW cacao powder from family operated farms with RAW maca powder, warmimg spices and the pure coconut sugar.</p>
+                        <p class="card-text">$250</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- NEWS -->
-        <h1>INFO</h1 >
+        <h1 class="my-4 my-md-4">INFO</h1 >
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="card mb-3">
@@ -169,17 +165,17 @@
         </div>
 
         <!-- contact -->
-        <h1 my-4 mt-md-4>聯絡我們</h1>
+        <h1 class="my-4 my-md-4">聯絡我們</h1>
         <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">姓名</div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">Name</div>
             <div class="col-sm-12 col-md-8 col-lg-8">
-                <input class="form-control" type="text" placeholder="請輸入您的姓名">
+                <input class="form-control" type="text" placeholder="Please fill in your name.">
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">信箱</div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">E-mail</div>
             <div class="col-sm-12 col-md-8 col-lg-8">
-                <input class="form-control" type="email" placeholder="請輸入您的信箱">
+                <input class="form-control" type="email" placeholder="email@example.com">
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">請輸入您的建議</div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">Advice</div>
             <div class="col-sm-12 col-md-8 col-lg-8">
                 <textarea class="form-control mb-3 mb-md-3" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
@@ -193,7 +189,7 @@
         </iframe>
 
         <footer class="text-white bg-dark py-4 text-center mt-2 mt-md-2">
-        Copyright &copy; 2020 THE CHOCOLATES
+        Copyright &copy; 2020 THE CHOCOLATES 
         </footer>
 
     </div>
