--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
 
         <!-- contact -->
-        <h1 class="my-4 my-md-4">聯絡我們</h1>
+        <h1 class="my-4 my-md-4">CONTACT US</h1>
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4 my-3 my-md-2 my-lg-3">Name</div>
             <div class="col-sm-12 col-md-8 col-lg-8">
