--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
         </iframe>
 
-        <footer class="text-white bg-dark py-4 text-center mt-2 mt-md-2">
+        <footer class="text-dark bg-light py-4 text-center mt-2 mt-md-2">
         Copyright &copy; 2020 THE CHOCOLATES 
         </footer>
 
